# eed_package_template

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/instructions/: eed_instructions.instructions.md
.github/rulesets/branches/: main.json
.github/rulesets/tags/: semantic versioning.json
.github/workflows/: callable_pytests.yml  callable_ruff.yml  callable_update_eed_basic_utils.yml  ci.yml  pytests.yml  pytests_cov.yml  ruff.yml  update_eed_basic_utils.yml
src/eed_package_template/: __init__.py  hello_world.py  untested_function.py
tests/: conftest.py  test_hello_world.py  test_package_import.py
