[project]
name = "eed-package-template"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EED85", email = "eric.brahmann@eed-solutions.de" }
]
requires-python = ">=3.12"
dependencies = [
    "eed-basic-utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff==0.12.3",
]

[project.scripts]
hello_world = "eed_package_template.hello_world:hello_world"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]  # Line too long (let black handle this)

[tool.uv.sources]
eed-basic-utils = { git = "https://github.com/EED-Solutions/eed_basic_utils" }
